@@ -1700,6 +1700,8 @@ static gboolean folder_build_tree(GNode *node, gpointer data)
 				qsearch_cond_type = 7;
 			else if (!strcmp(attr->value, "in-addressbook"))
 				qsearch_cond_type = 8;
+			else if (!strcmp(attr->value, "last30"))
+				qsearch_cond_type = 9;
 		} else if (!strcmp(attr->name, "account_id")) {
 			account = account_find_from_id(atoi(attr->value));
 			if (!account) g_warning("account_id: %s not found\n",
@@ -1878,7 +1880,7 @@ static void folder_write_list_recursive(GNode *node, gpointer data)
 					"mark", "unread", "mime", "to"};
 	static gchar *qsearch_cond_str[] = {"all", "unread", "mark", "clabel",
 					    "mime", "w1day", "last5", "last7",
-					    "in-addressbook"};
+					    "in-addressbook", "last30"};
 
 	g_return_if_fail(node != NULL);
 	g_return_if_fail(fp != NULL);
@@ -1937,7 +1939,7 @@ static void folder_write_list_recursive(GNode *node, gpointer data)
 				fprintf(fp, " sort_type=\"descending\"");
 		}
 		if (item->qsearch_cond_type > 0 &&
-		    item->qsearch_cond_type < 9) {
+		    item->qsearch_cond_type < 10) {
 			fprintf(fp, " qsearch_cond=\"%s\"",
 				qsearch_cond_str[item->qsearch_cond_type]);
 		}
