@@ -1,3 +1,8 @@
+2013-09-11
+
+	* src/quick_search.[ch]
+	  libsylph/folder.c: added 'Last 30 days' to the quick search menu.
+
 2013-09-10
 
 	* src/imageview.[ch]
